# shpool_pty

./: Cargo.toml
.github/workflows/: presubmit.yml
examples/: main.rs  new.rs
src/: lib.rs
src/descriptor/: mod.rs
src/fork/: err.rs  mod.rs
src/fork/pty/master/: err.rs  mod.rs
src/fork/pty/slave/: err.rs  mod.rs
tests/: it_can_read_write.rs  it_fork_with_new_pty.rs
