[package]
name = "shpool_pty"
version = "0.3.1"
authors = ["Hika Hibariya <hibariya@gmail.com>", "Ethan Pailes <ethan@pailes.org>"]
repository = "https://github.com/shell-pool/shpool_pty"
homepage = "https://github.com/shell-pool/shpool_pty"
license = "MIT"
description = "Fork with new pseudo-terminal (PTY)"
keywords = ["pty", "tty", "pseudo", "terminal", "fork"]

[features]
default       = []
lints         = ["clippy", "nightly"]
nightly       = [] # for building with nightly and unstable features
unstable      = [] # for building with unstable features on stable Rust
debug         = [] # for building with debug messages
travis        = ["lints", "nightly"] # for building with travis-cargo

[dependencies.log]
version       = "0.4"

[dependencies.errno]
version       = "0.2"

[dependencies.libc]
version       = ">= 0.2.18"

[dependencies.clippy]
version       = "0.0"
optional      = true
